# Office-Assitant-Robot

./: README.md  pal_office.world
launch_file/: tiago_gazebo.launch.py
office_assistant_launch/: package.xml  setup.cfg  setup.py
office_assistant_launch/launch/: office_assistant.launch.py
perception_yolov8/: package.xml  setup.cfg  setup.py
perception_yolov8/perception_yolov8/: yolo_node.py
task_manager/: package.xml  setup.py
task_manager/task_manager/: task_manager_node.py
tiago_tasks/: all_tasks.py  arm_control_action.py  arm_gripper_teleop.py  gripper_control_action.py  tasks.py
voice_command_interface/: package.xml  setup.cfg  setup.py
voice_command_interface/voice_command_interface/: voice_listener.py
yolo_detector/: package.xml  setup.py
yolo_detector/yolo_detector/: yolo_detecter.py
