<?xml version="1.0"?>
<package format="3">
  <name>office_assistant_launch</name>
  <version>0.0.1</version>
  <description>Master launch file to integrate custom office assistant modules with TIAGo robot simulation.</description>
  <maintainer email="your@email.com">Your Name</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <!-- Needed to include and find other packages -->
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>tiago_gazebo</exec_depend>
  <exec_depend>perception_yolov8</exec_depend>
  <exec_depend>voice_command_interface</exec_depend>
  <exec_depend>task_manager</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>

