<?xml version="1.0"?>
<package format="3">
  <name>voice_command_interface</name>
  <version>0.0.1</version>
  <description>Captures voice commands and uses Azure OpenAI to extract intent.</description>
  <maintainer email="your@email.com">Your Name</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <!-- Python deps (installed via pip) -->
  <exec_depend>speechrecognition</exec_depend>
  <exec_depend>openai</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>

